// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> Default story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="1"
      >
        Default text field
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="2"
        aria-invalid="false"
        class="text-input"
        data-bootstrap-override="textinput"
        id="1"
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="2"
    >
      This is a fieldnote.
    </div>
  </div>
</div>
`;

exports[`<TextField /> Disabled story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline text-field__overline--disabled"
    >
      <label
        class="label"
        for="6"
      >
        Disabled text field
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="7"
        aria-invalid="false"
        class="text-input"
        data-bootstrap-override="textinput"
        disabled=""
        id="6"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--disabled"
      id="7"
    >
      This TextField is disabled
    </div>
  </div>
</div>
`;

exports[`<TextField /> DisabledVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="52"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="53"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="52"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="53"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="54"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="55"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="54"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="55"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="56"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="56"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="58"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="58"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="61"
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="60"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="61"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="63"
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="62"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="63"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="64"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="66"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> Error story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="3"
      >
        Error text field
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="4"
        aria-invalid="true"
        class="text-input error"
        data-bootstrap-override="textinput"
        id="3"
        type="text"
      />
    </div>
    <div
      class="field-note field-note--error"
      id="4"
    >
      <svg
        class="icon field-note__icon"
        fill="currentColor"
        role="img"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="5"
        >
          error
        </title>
        <use
          xlink:href="test-file-stub#dangerous"
        />
      </svg>
      This is a fieldnote with an error.
    </div>
  </div>
</div>
`;

exports[`<TextField /> ErrorVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="32"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="33"
          aria-invalid="true"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="32"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="33"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="34"
          >
            error
          </title>
          <use
            xlink:href="test-file-stub#dangerous"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="35"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="36"
          aria-invalid="true"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="35"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="36"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="37"
          >
            error
          </title>
          <use
            xlink:href="test-file-stub#dangerous"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="38"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="38"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="40"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="40"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="43"
          aria-invalid="true"
          aria-label="Label text"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="42"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="43"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="44"
          >
            error
          </title>
          <use
            xlink:href="test-file-stub#dangerous"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="46"
          aria-invalid="true"
          aria-label="Label text"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="45"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="46"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="47"
          >
            error
          </title>
          <use
            xlink:href="test-file-stub#dangerous"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="48"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="true"
          aria-label="Label text"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="50"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> InputWithin story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="14"
      >
        Input field with button inside
         
      </label>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-invalid="false"
        class="text-input"
        data-bootstrap-override="textinput"
        id="14"
        type="text"
      />
      <div
        class="text-field__input-within"
      >
        <button
          class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand button button--icon"
          data-bootstrap-override="clickable-style-icon"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> LabelFieldnoteVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="16"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="17"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="16"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="17"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="18"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="19"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="18"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="19"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="20"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="20"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="22"
        >
          Label text
           
        </label>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="22"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="25"
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="24"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="25"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="27"
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="26"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="27"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="28"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="30"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> NoVisibleLabel story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline text-field__overline--no-label"
    >
      <p
        class="text text--sm"
      >
        Required
      </p>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="13"
        aria-invalid="false"
        aria-label="Input for no visible label"
        class="text-input"
        data-bootstrap-override="textinput"
        id="12"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="13"
    >
      This text field has no visible label
    </div>
  </div>
</div>
`;

exports[`<TextField /> OptionalIndicator story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="10"
      >
        Text field with fieldNote
         
      </label>
      <p
        class="text text--sm"
      >
        Optional
      </p>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="11"
        aria-invalid="false"
        class="text-input"
        data-bootstrap-override="textinput"
        id="10"
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="11"
    >
      This is a fieldnote for an optional text field.
    </div>
  </div>
</div>
`;

exports[`<TextField /> OptionalIndicatorVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="94"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="95"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="94"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="95"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="96"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="97"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="96"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="97"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="98"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="98"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="100"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="100"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="103"
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="102"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="103"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="105"
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="104"
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="105"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="106"
          placeholder="placeholder"
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="108"
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, label, isError
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="110"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="111"
          aria-invalid="true"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="110"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="111"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="112"
          >
            error
          </title>
          <use
            xlink:href="test-file-stub#dangerous"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="113"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="114"
          aria-invalid="true"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="113"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="114"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="115"
          >
            error
          </title>
          <use
            xlink:href="test-file-stub#dangerous"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      fieldNote, label, disabled
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="116"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="117"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="116"
          placeholder="placeholder"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="117"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="118"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Optional
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="119"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="118"
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="119"
      >
        fieldNote text
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextField /> RequiredIndicator story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div>
    <div
      class="text-field__overline"
    >
      <label
        class="label"
        for="8"
      >
        Text field with fieldNote
         
      </label>
      <p
        class="text text--sm"
      >
        Required
      </p>
    </div>
    <div
      class="text-field__body"
    >
      <input
        aria-describedby="9"
        aria-invalid="false"
        class="text-input"
        data-bootstrap-override="textinput"
        id="8"
        required=""
        type="text"
      />
    </div>
    <div
      class="field-note"
      id="9"
    >
      This is a fieldnote for a required text field.
    </div>
  </div>
</div>
`;

exports[`<TextField /> RequiredIndicatorVariants story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <div
    style="display: grid; grid-template-columns: 1fr 2fr 2fr; gap: 2rem;"
  >
    <div />
    <p>
      Placeholder
    </p>
    <p>
      No Placeholder
    </p>
    <p>
      fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="68"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="69"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="68"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="69"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="70"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="71"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="70"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="71"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, label
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="72"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="72"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="74"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          id="74"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="77"
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="76"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="77"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="79"
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="78"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note"
        id="79"
      >
        fieldNote text
      </div>
    </div>
    <p>
      no fieldNote, no label
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="80"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--no-label"
      >
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-invalid="false"
          aria-label="Label text"
          class="text-input"
          data-bootstrap-override="textinput"
          id="82"
          required=""
          type="text"
        />
      </div>
    </div>
    <p>
      fieldNote, label, isError
    </p>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="84"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="85"
          aria-invalid="true"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="84"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="85"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="86"
          >
            error
          </title>
          <use
            xlink:href="test-file-stub#dangerous"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline"
      >
        <label
          class="label"
          for="87"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="88"
          aria-invalid="true"
          class="text-input error"
          data-bootstrap-override="textinput"
          id="87"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--error"
        id="88"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          role="img"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="89"
          >
            error
          </title>
          <use
            xlink:href="test-file-stub#dangerous"
          />
        </svg>
        fieldNote text
      </div>
    </div>
    <p>
      fieldNote, label, disabled
    </p>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="90"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="91"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="90"
          placeholder="placeholder"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="91"
      >
        fieldNote text
      </div>
    </div>
    <div>
      <div
        class="text-field__overline text-field__overline--disabled"
      >
        <label
          class="label"
          for="92"
        >
          Label text
           
        </label>
        <p
          class="text text--sm"
        >
          Required
        </p>
      </div>
      <div
        class="text-field__body"
      >
        <input
          aria-describedby="93"
          aria-invalid="false"
          class="text-input"
          data-bootstrap-override="textinput"
          disabled=""
          id="92"
          required=""
          type="text"
        />
      </div>
      <div
        class="field-note field-note--disabled"
        id="93"
      >
        fieldNote text
      </div>
    </div>
  </div>
</div>
`;
